[gd_scene load_steps=5 format=2]

[ext_resource path="res://Enemies/Hell/Serpent/SnakeHead.gd" type="Script" id=1]
[ext_resource path="res://Enemies/Hell/Serpent/bone_serpent_head.png" type="Texture" id=2]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 7.0

[node name="SnakeHead" type="KinematicBody2D"]
collision_layer = 2147483648
collision_mask = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 3, 0 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 2 )

[node name="Hitbox" parent="." instance=ExtResource( 3 )]
collision_layer = 16
collision_mask = 131076

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]

[node name="Timer2" type="Timer" parent="."]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]

[editable path="Hitbox"]
